Fix shifting html by using inline display. Also, positioned refresh icon in search field and animated.

--- a/client/app/drug-events/drug-events.less
+++ b/client/app/drug-events/drug-events.less
@@ -352,3 +352,14 @@
   fill: @tab-active-bg-color;
   text-anchor: middle;
 }
+
+.infield-search-icon {
+  color: black;
+  position: relative;
+  top: -25px;
+  left: 210px;
+}
+
+#search-div {
+  display: inline;
+}
